--- a/supports-fig.tex
+++ b/supports-fig.tex
@@ -40,14 +40,14 @@
     \node[] (b2') at (1.8,0) {$a_2$};
     \node[] (b3') at (1.8,-.6) {$a_3$};
 
-    \node[] (label) at (-3.3, -1.5) {$S$ supports $T$};
-    \node[] (label) at (3.3, -1.5) {$T$ covers $S$};
+    \node[] (label) at (-3.3, -1.5) {$P$ supports $Q$};
+    \node[] (label) at (3.3, -1.5) {$Q$ covers $P$};
 
-    \node[] (label) at (-4.8, 1.5) {$S$};
-    \node[] (label) at (-1.8, 1.5) {$T$};
+    \node[] (label) at (-4.8, 1.5) {$P$};
+    \node[] (label) at (-1.8, 1.5) {$Q$};
 
-    \node[] (label) at (1.8, 1.5) {$S$};
-    \node[] (label) at (4.8, 1.5) {$T$};
+    \node[] (label) at (1.8, 1.5) {$P$};
+    \node[] (label) at (4.8, 1.5) {$Q$};
 
 
       \draw[->] (a1) to (a1');
